6701887: JDK7 server VM in endless loop in Node::dominates

The method Node::dominates loops in the dead code which does not have a Region node.

Reviewed-by: jrose, never